--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <div class="container-sm text-center">
+    <a class="text-end" th:href="@{/logout}"> Logout</a>
     <h1>Add product</h1>
-<form method="post" th:action="@{/list/__${listId}__/product}" th:object="${emptyProduct}">
+<form method="post" th:action="@{/user/__${userId}__/lists/__${listId}__/product}" th:object="${emptyProduct}">
     <div class="input-group input-group-lg mt-3 mb-3 justify-content-center">
         <span class="input-group-text">Product name:</span>
         <input type="text" th:field="*{productName}" placeholder="Name...">
@@ -22,7 +23,7 @@
     </div>
         <button type="submit" class="btn btn-success mb-3"><i class="bi bi-plus-circle-fill"></i> Add product</button>
 </form>
-<a th:href="@{/list/{id}(id=${listId})}"class="btn btn-outline-primary"><i class="bi bi-box-arrow-in-left"></i> Return to list</a>
+<a th:href="@{/user/__${userId}__/lists/__${listId}__}"class="btn btn-outline-primary"><i class="bi bi-box-arrow-in-left"></i> Return to list</a>
 </div>
 </body>
 </html>
