--- a/src/main/resources/templates/product-edit.html
+++ b/src/main/resources/templates/product-edit.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <div class="container-sm text-center">
+  <a class="text-end" th:href="@{/logout}"> Logout</a>
   <h2>Edit product</h2>
-<form method="post" th:action="@{/list/__${listId}__/product/edit/__${product.id}__}" th:object="${product}">
+<form method="post" th:action="@{/user/__${userId}__/lists/__${listId}__/product/edit/__${product.id}__}" th:object="${product}">
   <input type="hidden" th:field="*{id}">
   <div class="input-group input-group-lg mt-3 mb-3 justify-content-center">
     <span class="input-group-text">Product name:</span>
@@ -23,7 +24,7 @@
   </div>
   <button type="submit" class="btn btn-success mb-3"><i class="bi bi-pencil-square"></i> Edit product</button>
 </form>
-  <a th:href="@{/list/{id}(id=${listId})}"class="btn btn-outline-primary"><i class="bi bi-box-arrow-in-left"></i> Return to list</a>
+  <a th:href="@{/user/__${userId}__/lists/__${listId}__}"class="btn btn-outline-primary"><i class="bi bi-box-arrow-in-left"></i> Return to list</a>
 </div>
 </body>
 </html>
